[package]
name = "binance-api-transaction-tutorial"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version= "1", features = ["full"] }
serde = { version = "1.0"}
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
hmac = "0.11.0"
sha2 = "0.9"
hex = "0.4"
dotenv = "0.15.0"